--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>JavaScript - Cognomi</title>
 </head>
 <body>
+    <h1>Lista Partecipanti evento</h1>
+    <ul id="list">
+        
+    </ul>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
